--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -41,6 +41,8 @@ dependencies:
   # The following adds the Cupertino Icons font to your application.
   # Use with the CupertinoIcons class for iOS style icons.
   cupertino_icons: ^1.0.6
+  firebase_ui_firestore: ^1.6.2
+  cloud_firestore: ^4.16.0
 
 dev_dependencies:
   flutter_test:
