--- a/android/local.properties
+++ b/android/local.properties
@@ -1,2 +1,5 @@
 sdk.dir=C:\\Users\\user\\AppData\\Local\\Android\\sdk
 flutter.sdk=D:\\flutter\\flutter_windows_3.19.4-stable
+flutter.buildMode=debug
+flutter.versionName=1.0.0
+flutter.versionCode=1
